# pre-commit-binary

./: .pre-commit-hooks.yaml  README.md  main.py  pyproject.toml
